# projecteuler

./: .gitignore  README.md  pyproject.toml
src/euler/problem_0001/: main.py  solutions.py
src/euler/problem_0002/: main.py  solutions.py
src/euler/problem_0003/: main.py  solutions.py
src/euler/problem_0004/: solutions.py
src/euler/problem_0005/: main.py  solutions.py
src/euler/problem_0006/: __main__.py  main.py  solutions.py
src/euler/problem_0007/: main.py  solutions.py
src/euler/problem_0008/: main.py  solutions.py
src/euler/problem_0009/: main.py  solutions.py
src/euler/problem_0010/: main.py  solutions.py
src/euler/problem_0011/: main.py  solutions.py
src/euler/utils/: helpers.py  primes.py
tests/: test_problem_0001.py  test_problem_0002.py  test_problem_0003.py  test_problem_0004.py  test_utils.py
